Fix upload width on Safari

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,4 +28,5 @@ fieldset {
 
 input[type='file'] {
     color: transparent;
+    width: 200px;
 }
